@@ -36,7 +36,8 @@
 #include "missionscript.h"
 #include "cmd/script/mission.h"
 
-AImissionScript::AImissionScript (string modname):Order (Order::MOVEMENT|Order::FACING){
+//AImissionScript::AImissionScript (string modname):Order (Order::MOVEMENT|Order::FACING){
+AImissionScript::AImissionScript (string modname){
   //  cout << "AImissionScript " << modname << endl;
   //printf("addr %x\n",(int)this);
   //  mission->addModule(modname);
